--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl distribution App-ArduinoBuilder
 
 0.08 - ??
 
- - Improve the logging, convert it to using Log::Log4per
+ - Improve the logging, convert it to using Log::Log4perl through Log::Any
  - Replace the custom CommandRunner with Parallel::TaskExecutor (the same code
    forked to a new separate distribution).
 
