--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl distribution App-ArduinoBuilder
 
 0.08 - ??
 
+ - Implement a workaround to convert command lines to using Windows escaping
+   when needed.
  - Improve the logging, convert it to using Log::Log4perl through Log::Any
  - Replace the custom CommandRunner with Parallel::TaskExecutor (the same code
    forked to a new separate distribution).
