--- a/Changes
+++ b/Changes
@@ -4,11 +4,13 @@ Revision history for Perl distribution App-ArduinoBuilder
 
  - Implement a workaround to convert command lines to using Windows escaping
    when needed.
- - Improve the logging, convert it to using Log::Log4perl through Log::Any
+ - Improve the logging. Convert it to using Log::Log4perl through Log::Any.
  - Replace the custom CommandRunner with Parallel::TaskExecutor (the same code
    forked to a new separate distribution).
  - Fix a bug with an inverted logic when recursing in the src directories.
  - Use IPC::Run for the JsonTool module.
+ - Reduce the default verbosity of the output by not logging entire command
+   lines on failures.
 
 0.07 - 2023-06-05
 
