--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@ Revision history for Perl distribution App-ArduinoBuilder
  - Reduce the default verbosity of the output by not logging entire command
    lines on failures.
  - Add a way to force a port for the system, even if the discovery fails.
+ - Improve the discovery and the matching of the upload and monitor ports.
 
 0.07 - 2023-06-05
 
